examples/test/testpolicy13402.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13402
  namespace: namespace24
spec:
  podSelector:
    matchLabels:
      key10: value13
      key34: value43
      key35: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value47
          key17: value10
          key7: value3
      podSelector:
        matchLabels:
          key45: value36
